# pl-forecasting

./: .gitignore  FL-LSTM.ipynb  LSTM.ipynb  XGBoost.ipynb  debug.ipynb  pyproject.toml  solution.ipynb  test.ipynb
.github/: copilot-instructions.md
