[project]
name = "ra-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "notebook>=7.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pyreadr>=0.5.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.2",
    "statsmodels>=0.14.4",
    "sympy>=1.13.3",
    "utilsforecast>=0.2.12",
    "xgboost>=3.0.4",
    "ydata-profiling>=4.12.2",
]
